fix: spacing issue on larger screens after game over

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,10 +15,12 @@ body {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     min-height: 100vh;
     background: #252525;
     padding: 3vw 6vw 1vw 6vw;
+    flex-direction: column;
+    align-content: center;
 }
 
 .logo {
